--- a/colt_project/test-output/old/Default suite/reporter-output.html
+++ b/colt_project/test-output/old/Default suite/reporter-output.html
@@ -1,7 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Login to C4C Application</td></tr>
-<tr><td>Enter Username: Abhishek.Bahadur@colt.net</td></tr>
-<tr><td>Enter Password: Colt1234</td></tr>
-<tr><td>Click on Login Button</td></tr>
-<tr><td><a href= 'D:/ColtRepo/ColtAutomation/colt_project/screenshots/regressionFlow_42018-05-25-01-04-51.png'target='_blank' ><img src='D:/ColtRepo/ColtAutomation/colt_project/screenshots/regressionFlow_42018-05-25-01-04-51.png'>regressionFlow_42018-05-25-01-04-51</a></td></tr>
-<tr><td>Before excel report-25_05_2018_13_05_01</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
