--- a/colt_project/test-output/old/Default suite/methods.html
+++ b/colt_project/test-output/old/Default suite/methods.html
@@ -1,14 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a66a6a">  <td>18/05/25 13:03:57</td>   <td>0</td> <td title="&gt;&gt;DriverTestCase.before()[pri:0, instance:com.scripts.RegressionTest@2aceadd4]">&gt;&gt;before</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="a66a6a">  <td>18/05/25 13:03:58</td>   <td>253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DriverTestCase.startTest(java.lang.reflect.Method)[pri:0, instance:com.scripts.RegressionTest@2aceadd4]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="dced80">  <td>18/05/25 13:03:58</td>   <td>256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegressionTest.regressionFlow_4()[pri:0, instance:com.scripts.RegressionTest@2aceadd4]">regressionFlow_4</td> 
-  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="a66a6a">  <td>18/05/25 13:04:51</td>   <td>53851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DriverTestCase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.scripts.RegressionTest@2aceadd4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
-<tr bgcolor="a66a6a">  <td>18/05/25 13:05:00</td>   <td>63058</td> <td title="&lt;&lt;DriverTestCase.tearDownSuite()[pri:0, instance:com.scripts.RegressionTest@2aceadd4]">&lt;&lt;tearDownSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="7e8f62">  <td>18/06/18 17:22:16</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;gridTest.setup()[pri:0, instance:com.scripts.gridTest@4f7d0008]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1900164709</td>   <td></td> </tr>
+<tr bgcolor="7e8f62">  <td>18/06/18 17:22:22</td>   <td>6750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="gridTest.simpleTest()[pri:0, instance:com.scripts.gridTest@4f7d0008]">simpleTest</td> 
+  <td>main@1900164709</td>   <td></td> </tr>
 </table>
